:wrench: update: 更新部分配置文件

--- a/pages/trending/trending.wxml
+++ b/pages/trending/trending.wxml
@@ -1,2 +1,4 @@
-<!--pages/trending/trending.wxml-->
-<text>pages/trending/trending.wxml</text>
+<!--  -->
+<view class="cu-custom" style="height:{{CustomBar}}px;"></view>
+
+<text> 🚗测试 </text>
