--- a/pages/trending/trending.wxss
+++ b/pages/trending/trending.wxss
@@ -1,5 +1,31 @@
 /* pages/trending/trending.wxss */
 
-page{
-  background: #fff;  
+page {
+  background: #fff;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.header {
+  width: 100%;
+  height: 90rpx;
+  margin-bottom: 8vh;
+  border-bottom: 1px solid #e9e4e6;
+  border-top: 1px solid #e9e4e6;
+}
+
+.music {
+  padding: 20rpx 30rpx 40rpx;
+  box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.3);
+}
+
+.nav {
+  position: absolute;
+  bottom: 15vh;
 }
