--- a/pages/trending/trending.wxml
+++ b/pages/trending/trending.wxml
@@ -8,6 +8,6 @@
       <text class='desc-text'>基于 IP 地址 ( {{ipInfo.ip}} ) </text>
     </view>
   </view>
-  <v-music wx:if="{{musicData.length !== 0}}" song_info="{{musicData[currentMusicIndex]}}" img="{{musicData.pic_big}}" class='music' />
+  <v-music wx:if="{{musicData.length !== 0}}" song_info="{{musicData[currentMusicIndex]}}" img="{{musicData.pic_big}}" class='music' catch:right="onNext"/>
   <v-nav first="{{isFirst}}" latest="{{isLast}}" title="{{musicData[currentMusicIndex].title}}" class='nav' catch:left="onPrevious" catch:right="onNext" />
 </view>
