--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -11,7 +11,7 @@
   box-shadow: 0 8px 12px #ebedf0;
 }
 
-.login-container image{
+.login-container image {
   width: 240rpx;
   height: 180rpx;
 }
@@ -27,30 +27,39 @@
   background: #77af9c;
   color: #fff;
   border-radius: 52rpx;
-  height:72rpx;
-  line-height:72rpx;
+  height: 72rpx;
+  line-height: 72rpx;
   margin: 35rpx 0 20rpx;
 }
 
-.cu-form-group text{
+.cu-form-group{
+  justify-content: flex-start;
+}
+
+.cu-form-group text {
   display: inline-block;
   height: 50rpx;
   margin-right: 15rpx;
 }
 
-.bg-cover{
+.cu-form-group .picker {
+  height: 100rpx;
+  text-align: left !important; 
+}
+
+.bg-cover {
   background-image: url("https://cdn.pixabay.com/photo/2016/04/15/10/23/grindelwald-1330662_1280.jpg");
   width: 100vw;
   height: 66vw;
   background-size: cover;
 }
 
-.prompt-message{
+.prompt-message {
   margin: 40rpx 10vw;
   text-align: center;
 }
 
-.prompt-message text{
+.prompt-message text {
   font-size: 24rpx;
   color: rgb(158, 158, 158);
 }
