:bug: fix: 修复播放快速切换的bug
完善验证，修改音乐播放快速切换的bug，添加各页面loading及版本库依赖

--- a/components/nav/index.wxss
+++ b/components/nav/index.wxss
@@ -16,6 +16,9 @@
 
 .title {
   font-size: 28rpx;
+  width: 60vw;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
-
-
