--- a/pages/trending/trending.wxml
+++ b/pages/trending/trending.wxml
@@ -1,13 +1,13 @@
 <view class="container">
   <!-- header -->
   <view class="cu-custom" style="height:{{CustomBar}}px;"></view>
-  <view class='header'>
+  <view class='header' wx:if="{{ipInfo}}">
     <text class='location'>🏠 : {{ipInfo.province}}-{{ipInfo.city}}</text>
     <view class='desc'>
       <text class='icon'></text>
-      <text class='desc-text'>基于 IP 地址 ( {{ipInfo.ip}} ) </text>
+      <text class='desc-text'>基于 IP 地址 ( {{ipInfo.ip}} )</text>
     </view>
   </view>
-  <v-music wx:if="{{musicData.length !== 0}}" song_info="{{musicData[currentMusicIndex]}}" img="{{musicData.pic_big}}" class='music' catch:right="onNext"/>
-  <v-nav first="{{isFirst}}" latest="{{isLast}}" title="{{musicData[currentMusicIndex].title}}" class='nav' catch:left="onPrevious" catch:right="onNext" />
+  <v-music wx:if="{{musicData.length !== 0}}" song_info="{{musicData[currentMusicIndex]}}" img="{{musicData.pic_big}}" class='music' catch:right="onNext" />
+  <v-nav wx:if="{{musicData.length !== 0}}" first="{{isFirst}}" latest="{{isLast}}" title="{{musicData[currentMusicIndex].title}}" class='nav' catch:left="onPrevious" catch:right="onNext" />
 </view>
